--- a/src/main/resources/db/changelog/changeset/model/009-create-reviews-table.yaml
+++ b/src/main/resources/db/changelog/changeset/model/009-create-reviews-table.yaml
@@ -32,6 +32,13 @@ databaseChangeLog:
                   constraints:
                     nullable: false
 
+              - column:
+                  name: created_at
+                  type: TIMESTAMP
+                  defaultValueComputed: CURRENT_TIMESTAMP
+                  constraints:
+                    nullable: false
+
         - addForeignKeyConstraint:
             baseTableName: reviews
             baseColumnNames: movie_id
