feat(db): add sample data and extend reviews table
- add changeset add-sample-movies.yaml with demo data
- include it in db-changelog-master.yaml
- extend reviews table

--- a/src/main/resources/db/changelog/changeset/data/add-sample-movies.yaml
+++ b/src/main/resources/db/changelog/changeset/data/add-sample-movies.yaml
@@ -181,7 +181,7 @@ databaseChangeLog:
                   value: "R"
               - column:
                   name: category
-                  value: "FILM"
+                  value: "MOVIE"
 
         - insert:
             tableName: movies
@@ -218,7 +218,7 @@ databaseChangeLog:
                   value: "PG_13"
               - column:
                   name: category
-                  value: "FILM"
+                  value: "MOVIE"
 
         - insert:
             tableName: movies
@@ -255,7 +255,7 @@ databaseChangeLog:
                   value: "PG_13"
               - column:
                   name: category
-                  value: "FILM"
+                  value: "MOVIE"
 
         # === movie_genres ===
         - insert:
