feat(movie): add pageable CRUD, soft delete, and seasonal logic
- added create, update, and soft delete endpoints in MovieController
- implemented @SQLDelete and @SQLRestriction for soft deletion
- added Season enum and automatic season detection by release date
- added pageable support for movie list and search endpoints
- refactored MovieMapper for partial updates using @MappingTarget
- simplified MovieSearchParametersDto for single-value filters
- updated MovieFiltersResponseDto with ratingValues (Double)
- added new SpecificationProviders (year, genre, category, minRating)
- updated Liquibase changes for season and deleted columns

--- a/src/main/resources/db/changelog/changeset/model/005-create-movies-table.yaml
+++ b/src/main/resources/db/changelog/changeset/model/005-create-movies-table.yaml
@@ -55,3 +55,10 @@ databaseChangeLog:
               - column:
                   name: category
                   type: VARCHAR(50)
+              - column:
+                  name: season
+                  type: varchar(20)
+              - column:
+                  name: deleted
+                  type: BIT
+                  defaultValueBoolean: false
