--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,9 +1,9 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.datasource.url=jdbc:mysql://localhost:3306/movie_catalog_test\
   ?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Q1234asdf!
+spring.datasource.username=
+spring.datasource.password=
 
-spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
-spring.liquibase.enabled=false
+spring.liquibase.change-log=classpath:db/changelog/db-changelog-master.yaml
+spring.liquibase.enabled=true
