feat(actor): add CRUD with soft delete and database integration
- Implemented ActorController with basic CRUD endpoints
- Added ActorService and ActorServiceImpl with CRUD logic
- Updated Liquibase changelog to include deleted column in actors table
- Fixed MovieService package path

--- a/src/main/resources/db/changelog/changeset/model/001-create-actors-table.yaml
+++ b/src/main/resources/db/changelog/changeset/model/001-create-actors-table.yaml
@@ -19,3 +19,7 @@ databaseChangeLog:
                   constraints:
                     nullable: false
                     unique: true
+              - column:
+                  name: deleted
+                  type: BIT
+                  defaultValueBoolean: false
