feat(security): implement JWT authentication and user management system
- Added Spring Security configuration with stateless JWT authentication
- Integrated JJWT for token generation and validation
- Implemented JwtUtil and JwtAuthenticationFilter for handling tokens
- Configured SecurityFilterChain with endpoint access rules
- Added AuthenticationService and controller for login and registration
- Added UserService and controller for profile management (get/update/delete)
- Created DTOs for user registration, login, and response
- Implemented UserMapper with MapStruct for entity ↔ DTO conversion
- Updated User entity with nickname, soft delete, and profile fields
- Added Role entity support
- Added validation for registration fields
- Updated Liquibase changelogs (users, roles, relations, seeds)
- Configured JWT secret and expiration in application properties

--- a/src/main/resources/db/changelog/changeset/model/006-create-users-table.yaml
+++ b/src/main/resources/db/changelog/changeset/model/006-create-users-table.yaml
@@ -15,7 +15,14 @@ databaseChangeLog:
                     nullable: false
 
               - column:
-                  name: username
+                  name: email
+                  type: VARCHAR(255)
+                  constraints:
+                    nullable: false
+                    unique: true
+
+              - column:
+                  name: nickname
                   type: VARCHAR(100)
                   constraints:
                     nullable: false
@@ -28,5 +35,20 @@ databaseChangeLog:
                     nullable: false
 
               - column:
-                  name: avatar_url
+                  name: first_name
+                  type: VARCHAR(100)
+
+              - column:
+                  name: last_name
+                  type: VARCHAR(100)
+
+              - column:
+                  name: profile_image_url
                   type: VARCHAR(512)
+
+              - column:
+                  name: deleted
+                  type: BIT(1)
+                  defaultValueBoolean: false
+                  constraints:
+                    nullable: false
