--- a/src/main/resources/db/changelog/db-changelog-master.yaml
+++ b/src/main/resources/db/changelog/db-changelog-master.yaml
@@ -27,3 +27,7 @@ databaseChangeLog:
       file: db/changelog/changeset/relation/013-create-movie-genres-table.yaml
   - include:
       file: db/changelog/changeset/relation/014-create-movie-countries-table.yaml
+  - include:
+      file: db/changelog/changeset/relation/015-create-users-roles-table.yaml
+  - include:
+      file: db/changelog/changeset/data/016-insert-roles.yaml
