--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,9 +1,13 @@
 spring.jpa.hibernate.ddl-auto=validate
 
-spring.datasource.url=jdbc:mysql://localhost:3306/movie_catalog_test\
-  ?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/movie_catalog_test
 spring.datasource.username=root
 spring.datasource.password=Q1234asdf!
+
+spring.datasource.hikari.data-source-properties.createDatabaseIfNotExist=true
+spring.datasource.hikari.data-source-properties.allowPublicKeyRetrieval=true
+spring.datasource.hikari.data-source-properties.useSSL=false
+spring.datasource.hikari.data-source-properties.serverTimezone=UTC
 
 spring.liquibase.change-log=classpath:db/changelog/db-changelog-master.yaml
 spring.liquibase.enabled=true
