feat(core): major refactor of movie, rating, review and comment system
- Updated SecurityConfig with refined access rules for movies, feedback, and review-comments
- Updated MovieController to return MovieResponseDto, added endpoints for similar movies and actors
- Added MovieActorService integration and new /movies/{id}/actors endpoint
- Reworked MovieRequestDto, MovieShortResponseDto, MovieResponseDto and MovieFullResponseDto
- Removed actorIds from movie creation/update flow and added isFree, ratingCount fields
- Simplified MovieMapper, removed actor/director entity mapping, added toResponseDto() and updated toFullDto()
- Refactored MovieService and MovieServiceImpl with new CRUD logic, improved full fetch and similar movies feature
- Cleaned up RatingRequestDto and ReviewRequestDto by removing userId field
- Updated RatingResponseDto and ReviewResponseDto to expose userNickname instead of userId
- Enhanced RatingRepository with custom queries, unique movie+user constraint and updateValue flow
- Enhanced ReviewRepository with movie+user checks, user-based filtering and existence checks
- Removed Movie.actors and Actor.movies relations, switched to movie_actors linking table
- Added /movies/{id}/similar feature with genre-based similarity and rating ordering
- Updated ReviewResponseDto to include list of ReviewCommentResponseDto
- Updated Liquibase changelogs for movies (rating_count, is_free), ratings (unique constraint), actors, and new movie_actors table
- Added seeds for actors, users, movies, genres, countries, movie relations and review comments
- Cleaned formatting and removed unused mappings, relations, and DTO fields across modules

--- a/src/main/resources/db/changelog/changeset/model/005-create-movies-table.yaml
+++ b/src/main/resources/db/changelog/changeset/model/005-create-movies-table.yaml
@@ -41,6 +41,11 @@ databaseChangeLog:
                   type: DECIMAL(3,1)
 
               - column:
+                  name: rating_count
+                  type: INT
+                  defaultValueNumeric: 0
+
+              - column:
                   name: poster_url
                   type: VARCHAR(512)
 
@@ -49,16 +54,26 @@ databaseChangeLog:
                   type: VARCHAR(512)
 
               - column:
+                  name: is_free
+                  type: BIT
+                  constraints:
+                    nullable: false
+
+              - column:
                   name: age_rating
                   type: VARCHAR(50)
 
               - column:
                   name: category
                   type: VARCHAR(50)
+
               - column:
                   name: season
-                  type: varchar(20)
+                  type: VARCHAR(20)
+
               - column:
                   name: deleted
                   type: BIT
                   defaultValueBoolean: false
+                  constraints:
+                    nullable: false
