--- a/src/main/resources/db/changelog/changeset/relation/010-create-users-roles-table.yaml
+++ b/src/main/resources/db/changelog/changeset/relation/010-create-users-roles-table.yaml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: vDmytriv
       changes:
         - createTable:
-            tableName: user_roles
+            tableName: users_roles
             columns:
               - column:
                   name: user_id
@@ -18,22 +18,22 @@ databaseChangeLog:
                     nullable: false
 
         - addPrimaryKey:
-            tableName: user_roles
+            tableName: users_roles
             columnNames: user_id, role_id
             constraintName: pk_user_roles
 
         - addForeignKeyConstraint:
-            baseTableName: user_roles
+            baseTableName: users_roles
             baseColumnNames: user_id
-            constraintName: fk_user_roles_user
+            constraintName: fk_users_roles_user
             referencedTableName: users
             referencedColumnNames: id
             onDelete: CASCADE
 
         - addForeignKeyConstraint:
-            baseTableName: user_roles
+            baseTableName: users_roles
             baseColumnNames: role_id
-            constraintName: fk_user_roles_role
+            constraintName: fk_users_roles_role
             referencedTableName: roles
             referencedColumnNames: id
             onDelete: CASCADE
