--- a/src/main/resources/db/changelog/changeset/model/001-create-actors-table.yaml
+++ b/src/main/resources/db/changelog/changeset/model/001-create-actors-table.yaml
@@ -23,3 +23,5 @@ databaseChangeLog:
                   name: deleted
                   type: BIT
                   defaultValueBoolean: false
+                  constraints:
+                    nullable: false
