feat(wishlist): implement user wishlist with items, API endpoints and DB migrations
- Added Wishlist and WishlistItem entities with relations to User and Movie
- Implemented WishlistRepository and WishlistItemRepository
- Implemented WishlistService
- Created WishlistController
- Added WishlistResponseDto and WishlistItemResponseDto
- Implemented WishlistMapper
- Added Liquibase migrations for wishlists and wishlist_items tables
- Updated registration flow to create wishlist after saving user

--- a/src/main/resources/db/changelog/db-changelog-master.yaml
+++ b/src/main/resources/db/changelog/db-changelog-master.yaml
@@ -31,6 +31,10 @@ databaseChangeLog:
       file: db/changelog/changeset/model/016-create-review-comments-table.yaml
   - include:
       file: db/changelog/changeset/relation/017-create-table-movie-actors.yaml
+  - include:
+      file: db/changelog/changeset/model/018-create-wishlists-table.yaml
+  - include:
+      file: db/changelog/changeset/relation/019-create-wishlist-items-table.yaml
 
   - include:
       file: db/changelog/changeset/data/020-insert-actors.yaml
