feat(validation): add DTO validation and refactor request models
ADD:
- Added @Valid to controllers
- Added validation rules to Movie, Search, Rating, Feedback, Comment, User DTOs
- Added entity-level validation (User, Review, ReviewComment)
- Added UpdateUserRequestDto
- Added wishlist response records

REFACTOR:
- Updated user update logic to use UpdateUserRequestDto
- Cleaned controller signatures and request models

--- a/src/main/resources/db/changelog/db-changelog-master.yaml
+++ b/src/main/resources/db/changelog/db-changelog-master.yaml
@@ -51,4 +51,6 @@ databaseChangeLog:
   - include:
       file: db/changelog/changeset/data/026-insert-movie-relations.yaml
   - include:
-      file: db/changelog/changeset/data/027-seed-review-comments-v1.yaml
+      file: db/changelog/changeset/data/027-seed-review.yaml
+  - include:
+      file: db/changelog/changeset/data/028-seed-review-comments.yaml
