feat(auth): implement email verification flow with token generation and resend support
- Added EmailVerificationToken entity and Liquibase migrations
- Implemented EmailVerificationTokenRepository
- Added EmailService for sending verification emails
- Added EmailVerificationService
- Updated UserService registration flow to generate verification token and send email

- Added endpoints to AuthenticationController
- Added emailVerified field to User entity and updated schema
- Adjusted GlobalExceptionHandler for RegistrationException handling

--- a/src/main/resources/db/changelog/db-changelog-master.yaml
+++ b/src/main/resources/db/changelog/db-changelog-master.yaml
@@ -35,6 +35,10 @@ databaseChangeLog:
       file: db/changelog/changeset/model/018-create-wishlists-table.yaml
   - include:
       file: db/changelog/changeset/relation/019-create-wishlist-items-table.yaml
+  - include:
+      file: db/changelog/changeset/model/020-create-email-verification-token.yaml
+  - include:
+      file: db/changelog/changeset/model/021-add-email-verified-to-users.yaml
 
   - include:
       file: db/changelog/changeset/data/020-insert-actors.yaml
