feat(auth): implement password reset flow with token generation and email delivery
- Added PasswordResetToken entity and Liquibase migration
- Added PasswordResetTokenRepository
- Added PasswordResetService with token creation, validation and password update
- Extended EmailService with password reset email sending
- Added DTOs: PasswordResetRequestDto and PasswordResetConfirmDto
- Added endpoints in AuthenticationController for reset-request and reset

- Updated application.properties with password reset configuration

--- a/src/main/resources/db/changelog/db-changelog-master.yaml
+++ b/src/main/resources/db/changelog/db-changelog-master.yaml
@@ -39,6 +39,8 @@ databaseChangeLog:
       file: db/changelog/changeset/model/020-create-email-verification-token.yaml
   - include:
       file: db/changelog/changeset/model/021-add-email-verified-to-users.yaml
+  - include:
+      file: db/changelog/changeset/model/022-create-password-reset-tokens.yaml
 
   - include:
       file: db/changelog/changeset/data/020-insert-actors.yaml
