--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,6 @@ app.base-url=http://localhost:8080/api
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+app.password-reset.token-expiration-minutes=5
+app.password-reset.base-url=http://localhost:3000/reset-password
