--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/movie_catalog\
 spring.datasource.username=root
 spring.datasource.password=Q1234asdf!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.liquibase.change-log=classpath:db/changelog/db-changelog-master.yaml
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 spring.liquibase.enabled=true
 
 spring.jpa.hibernate.ddl-auto=validate
