--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>${springdoc.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>2.7.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
