refactor(config): move sensitive properties to environment variables

--- a/.env.template
+++ b/.env.template
@@ -6,10 +6,21 @@ MYSQLDB_ROOT_PASSWORD=
 MYSQLDB_LOCAL_PORT=
 MYSQLDB_DOCKER_PORT=
 
+SPRING_DATASOURCE_URL=
+SPRING_DATASOURCE_USERNAME=
+SPRING_DATASOURCE_PASSWORD=
+
 SPRING_LOCAL_PORT=
 SPRING_DOCKER_PORT=
 DEBUG_PORT=
-
 SPRING_PROFILES_ACTIVE=
 
+APP_PASSWORD_RESET_BASE_URL=
+
 JWT_SECRET=
+GOOGLE_OAUTH_CLIENT_ID=
+
+SPRING_MAIL_HOST=
+SPRING_MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
